objects/Portal_Tab_Access__c.object
<CustomObject>
    <description>FV2 : Used for storing the visibility information of a portal user on the different gadgets (tabs)</description>
    <fields>
        <fullName>ASIC_Service_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asic Service Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Setup_Design_Kits_ASIC_DK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK (ASIC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Setup_Documentation_ASIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design &amp; Technology Documents (ASIC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Setup_News_Alerts_ASIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>News &amp; Alerts (ASIC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Account Statement tab</description>
        <label>Account Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>FV2 : lookup to account object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Access Setup</relationshipLabel>
        <relationshipName>Portal_Tab_Access</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BCM__c</fullName>
        <defaultValue>true</defaultValue>
        <label>BCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on BOM tab</description>
        <label>BOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Backlog tab</description>
        <label>Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Billing tab</description>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on CPK tab</description>
        <label>CPK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Certificate of Compliance tab</description>
        <label>Certificate of Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Supplier Service tab.</description>
        <label>Change Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_request_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Change request report tab</description>
        <label>My Device Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configurator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Configurator tab</description>
        <label>Configurator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Analysis_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Construction Analysis report tab</description>
        <label>Issue Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_AccountShortName__c</fullName>
        <label>Contact AccountShortName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_CreatedByHCMLoginId__c</fullName>
        <label>Contact CreatedByHCMLoginId</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_CreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact CreatedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Access_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_CreatedDate__c</fullName>
        <label>Contact CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_FirstName__c</fullName>
        <label>Contact FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_HCM_Login_Id__c</fullName>
        <label>Contact HCM Login Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Is_Portal_User_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Is Portal User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_LastModifiedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Access_Setup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_LastModifiedDate__c</fullName>
        <label>Contact LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_LastName__c</fullName>
        <label>Contact LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Login_Id__c</fullName>
        <label>Contact Login Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ModifiedHCMLoginId__c</fullName>
        <label>Contact ModifiedHCMLoginId</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Short_Name__c</fullName>
        <label>Contact Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Access Setup</relationshipLabel>
        <relationshipName>Access_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_and_Debit_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Credit and Debit Note tab</description>
        <label>Credit and Debit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Mfg_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Custom Mfg Report tab</description>
        <label>Custom Mfg Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Order_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Customer Order Report tab.</description>
        <label>Custom Order Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Shipment_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Custom Shipment Report tab</description>
        <label>Custom Shipment Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cycle_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Cycle Time tab</description>
        <label>Cycle Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Enablement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Design Enablement tab</description>
        <label>Design Enablement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Specification_Packages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Design Specification Packages tab</description>
        <label>Design Specification Packages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Technology_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Design &amp; Technology Documents tab</description>
        <label>Design &amp; Technology Documents (Foundry)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Enablements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Device Enablement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropBox_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DropBox (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DropBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropBox_non_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DropBox (non-ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EHS_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Supplier Service tab.</description>
        <label>EHS Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ET_and_Inline_CPK_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on ET and Inline CPK report tab</description>
        <label>ET and Inline CPK report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Electrical Test tab</description>
        <label>Electrical Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Lot_status_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Engineering Lot status report tab</description>
        <label>Engineering Lot status report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Engineering WIP tab</description>
        <label>Engineering WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Export Control tab</description>
        <label>Export Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_Out_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Fab Out Schedule tab</description>
        <label>Fab Out Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Fab WIP tab</description>
        <label>Fab WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finish_Goods_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Finish Goods Report tab</description>
        <label>Finish Goods Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Fab_Cycle_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Forecast Fab Cycle Time tab</description>
        <label>Forecast Fab Cycle Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foundry_Service_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foundry Service Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDPW_Calculator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDPW Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GFV_Fab9_10_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GFV Fab9/10 Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalShuttle_MPW_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on GlobalShuttle – MPW WIP tab</description>
        <label>GlobalShuttle – MPW WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Shuttle_reservation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Global Shuttle reservation tab</description>
        <label>Global Shuttle reservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on IP Declaration  tab</description>
        <label>IP Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_PLM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on IP(PLM) Link.</description>
        <label>IPDK (Foundry)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on IP Catalog Search tab</description>
        <label>IP Catalog Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpactNotify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ImpactNotify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Measurement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Inline Measurement tab</description>
        <label>Inline Measurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Configurator_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Launch Configurator Plus</description>
        <label>Launch Configurator Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Control_table__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Lot Control table tab</description>
        <label>Lot Control table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 ; Shows the visibility of Portal user on Lot History tab</description>
        <label>Lot History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDD_Parts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MDD_Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on MPW tab</description>
        <label>MPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Martini_Error_Message__c</fullName>
        <label>Martini Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Martini_Status__c</fullName>
        <label>Martini Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Martini_Sync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Martini Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Martinistore_Sync_Status__c</fullName>
        <label>Martinistore Sync Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Selection_Qualififcation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to Supplier Services</description>
        <label>Material Selection &amp; Qualififcation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Final_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Module Final Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on My Devices tab</description>
        <label>My Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Reticles_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox needs to be checked along with the &apos;My Reticles&apos; checkbox for granting &apos;Read Only&apos; access for the ROS application.</inlineHelpText>
        <label>My Reticles(Read Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Wafers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on My Wafers tab</description>
        <label>My Wafers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRE_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on NRE Invoice tab</description>
        <label>NRE Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Part_Creation_after_Proto_form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on New Part Creation (after Proto form) tab</description>
        <label>New Part Creation (after Proto form)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Time_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on On Time Delivery tab</description>
        <label>On Time Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Order Acknowledgement tab</description>
        <label>Order Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Order Query tab</description>
        <label>Order Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Order Link.</description>
        <label>Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_EHS_CSR_Disclosures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other EHS/CSR Disclosures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCN_End_of_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCN End of Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on PCRB tab</description>
        <label>PCRB (check with CE/QRA for assignment)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_Design_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on PDK &amp; Design Documents tab</description>
        <label>PDK &amp; Design Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_FTP_Inbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK FTP Inbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on PDK tab.</description>
        <label>PDK (Foundry)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PNP_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PNP Release Access</description>
        <inlineHelpText>PNP Release Access</inlineHelpText>
        <label>PNP Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Lead_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast FabCycle Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTRF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on PTRF tab</description>
        <label>PTRF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packaging_List_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Packaging List Report tab</description>
        <label>Packaging List Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PortalAccountIdentifier__c</fullName>
        <description>FV2 : This field is used for storing unique value of Account Id and Portal User Id.</description>
        <label>PortalAccountIdentifier</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Price List tab</description>
        <label>Price List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procedure_Review_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to Supplier Services</description>
        <label>Procedure Review &amp; Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Procedure tab</description>
        <label>Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Process ID tab</description>
        <label>Process ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Reliability_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Process Reliability Monitoring tab</description>
        <label>Process Reliability Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Request_Form_PRF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Process Request Form (PRF) tab</description>
        <label>Process Request Form (PRF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Product Catalog Search tab</description>
        <label>Product Catalog Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Product &amp; Services tab</description>
        <label>Product &amp; Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Wafer_Compliance_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Product Wafer Compliance Analysis tab</description>
        <label>Product Wafer Compliance Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Production Query tab</description>
        <label>Production Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Production Link.</description>
        <label>Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prototype_tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Prototype tracking tab</description>
        <label>Prototype tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Purchase Order Tracking tab</description>
        <label>Purchase Order Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QMX_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QMX Work Order</description>
        <inlineHelpText>QMX Work Order</inlineHelpText>
        <label>QMX Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_System__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quality System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROM_Blanket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on ROM Blanket tab</description>
        <label>ROM Blanket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTR_RTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on RTR/RTP tab</description>
        <label>RTR/RTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Mask_Viewer_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Mask Viewer (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Mask_Viewer_non_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Mask Viewer (non-ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reticle_Obsolescence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Reticle Obsolescence tab</description>
        <inlineHelpText>This checkbox needs to checked to grant ROS application access.</inlineHelpText>
        <label>My Reticles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Risk Waiver tab</description>
        <label>Risk Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQE_Applications_Overview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to Supplier Services</description>
        <label>Supplier Quality Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scrap_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Scrap Reports tab</description>
        <label>Scrap Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Source_Tapeout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Source Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Services tab</description>
        <label>Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Alert_by_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Ship Alert (by Location ) tab</description>
        <label>Ship Alert (by Location )</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Alert_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Shipment Alert Report tab</description>
        <label>Shipment Alert Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Detail_Unsort_and_Sort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Detail (Unsort and Sort)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Shipping Query tab</description>
        <label>Shipping Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Shipping Link.</description>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specs_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Supplier Service tab.</description>
        <label>Specs Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stepper_Tooling_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Stepper Tooling Form tab</description>
        <label>Stepper Tooling Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_eCOA_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to Supplier Services.</description>
        <label>Supplier eCOA Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tapeout_Fab_9_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tapeout Fab 9/10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Tax Invoice tab</description>
        <label>Tax Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamRoom_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TeamRoom (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tester_Gauge_R_R__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Tester Gauge R&amp;R tab</description>
        <label>Tester Gauge R&amp;R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tools_Utilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tools &amp; Utilities</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>